--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build && next export",
     "start": "next start"
   },
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.0"
+  },
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
