--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "next": "^10.2.3",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.3.0",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "url-loader": "^4.1.1"
   }
 }
