--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
-    "next": "^10.2.3",
+    "next": "^13.4.13",
     "next-images": "^1.8.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.0",
